--- a/A/Altice/Altice_May2020/ads/P3_SDL_1P_39_1yr(Fast)/300x600/300x600_frame2.html
+++ b/A/Altice/Altice_May2020/ads/P3_SDL_1P_39_1yr(Fast)/300x600/300x600_frame2.html
@@ -117,15 +117,15 @@ amo.registerAttribute("frameImage3","IMAGE","1x1.png");
 amo.registerAttribute("frameImage4","IMAGE","300x600_OPT_1P_39_1yr_Frame05.png");
 amo.registerAttribute("frameText1","TEXT","Stay<br>connected<br>on your<br>work day");
 amo.registerAttribute("frameText12","TEXT","and<br>school<br>day");
-amo.registerAttribute("frameText21", "TEXT", "<div style='top: 115px;left: 33px;font-size: 28px;line-height:1.1;color: #fff;'>Fast<br>Internet</div>");
-amo.registerAttribute("frameText22", "TEXT", "<div style='top: 172px;left: 24px;width: 260px;color: #fff;line-height: 1;'><font style='font-size: 116px;letter-spacing: -1.5px;'>$39</font><font style='margin-left: 9px;font-size: 19px;display: inline-block;vertical-align: 29px;'>99/<br>mo.<br>1 yr.</font><div class='AlticeRegular' style='margin: 0px 0 0 10px;font-size: 14px;'>Plus taxes, fees<br>& charges</div></div>");
+amo.registerAttribute("frameText21", "TEXT", "<div style='top: 115px;left: 33px;font-size: 28px;line-height:1.1;color: #fff;'>Fast Internet</div>");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top: 142px;left: 24px;width: 260px;color: #fff;line-height: 1;'><font style='font-size: 116px;letter-spacing: -1.5px;'>$39</font><font style='margin-left: 9px;font-size: 19px;display: inline-block;vertical-align: 29px;'>99/<br>mo.<br>1 yr.</font><div class='AlticeRegular' style='margin: 0px 0 0 10px;font-size: 14px;'>Plus taxes, fees<br>& charges</div></div>");
 amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
 amo.registerAttribute("frameText31","TEXT","<div style='top:88px;left:18px;'><div class='bulletedText'>Fast & reliable Internet</div></div>");
 amo.registerAttribute("frameText32","TEXT","<div style='top:146px;left:18px;'><div class='bulletedText'>Contract buyout<br>up to $100</div></div>");
 amo.registerAttribute("frameText33","TEXT","<div style='top:204px;left:18px;'><div class='bulletedText'>30-day money-back guarantee</div></div>");
-amo.registerAttribute("frameText41", "TEXT", "<div style='top: 86px;left: 24px;font-size: 28px;line-height:1.1;'>Fast<br>Internet</div>");
-amo.registerAttribute("frameText42", "TEXT", "<div style='top: 142px;left: 17px;width: 260px;line-height: 1;'><font style='font-size: 116px;letter-spacing: -1.5px;' class='coloredText'>$39</font><font style='margin-left: 9px;font-size: 19px;display: inline-block;vertical-align: 29px;'>99/<br>mo.<br>1 yr.</font><div class='AlticeRegular' style='margin: 0px 0 0 8px;font-size: 14px;'>Plus taxes, fees & charges</div></div>");
-amo.registerAttribute("frameText43", "TEXT", "<div style='top: 290px;left: 26px;transform: scale(0.655);transform-origin: top left;'><div class='bulletedText'>No annual contract</div></div>");
+amo.registerAttribute("frameText41", "TEXT", "<div style='top: 86px;left: 24px;font-size: 28px;line-height:1.1;'>Fast Internet</div>");
+amo.registerAttribute("frameText42", "TEXT", "<div style='top: 112px;left: 17px;width: 260px;line-height: 1;'><font style='font-size: 116px;letter-spacing: -1.5px;' class='coloredText'>$39</font><font style='margin-left: 9px;font-size: 19px;display: inline-block;vertical-align: 29px;'>99/<br>mo.<br>1 yr.</font><div class='AlticeRegular' style='margin: 0px 0 0 8px;font-size: 14px;'>Plus taxes, fees & charges</div></div>");
+amo.registerAttribute("frameText43", "TEXT", "<div style='top: 270px;left: 26px;transform: scale(0.655);transform-origin: top left;'><div class='bulletedText'>No annual contract</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -298,7 +298,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 290px;left: 26px;
           var frameId = 3;
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[3]})
-          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame4}));
+          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 3.3, opacity:0, onComplete: animateFrame4}));
         }
         var animateFrame2 = function(flag){
           var frameId = 2;
@@ -310,12 +310,12 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 290px;left: 26px;
           ad.layers.frameVideo1.querySelector('video').onplay = function(){
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
             .to('#frameText1', {autoAlpha:1})
-            .to('#frameText1', {autoAlpha:0,delay:1.5})
+            .to('#frameText1', {autoAlpha:0,delay:2})
             .to('#frameText12', {autoAlpha:1})
           }
           ad.layers.frameVideo1.querySelector('video').onended = function(){
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frame1', (flag==true?{}:{delay:0.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
+            .to('#frame1', (flag==true?{}:{delay:1.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
           }
         }
         if('frame1' in ad.layers) ad.layers.frame1.remove();
