--- a/A/Altice/Altice_May2020/ads/SDL_HFC_PFL_Gig_54/728x90/728x90_frame4.html
+++ b/A/Altice/Altice_May2020/ads/SDL_HFC_PFL_Gig_54/728x90/728x90_frame4.html
@@ -86,14 +86,10 @@
       <script type="text/javascript">
          amo.registerClick("clickUrl", "https://www.altice.com");
          amo.registerAttribute("ctaText", "TEXT", "Learn more");
-         amo.registerAttribute("frameText11", "TEXT", "<div style='top:10px;left:10px;font-size:28px;line-height:1.2;'>More speed for more devices<br>with 1 Gig Internet</div>");
+         amo.registerAttribute("frameText1", "TEXT", "<div style='top:10px;left:10px;font-size:28px;line-height:1.2;'>More speed for more devices<br>with 1 Gig Internet</div>");
          amo.registerAttribute("frameText21", "TEXT", "<div style='top:24px;left:10px;font-size:28px;'>The <span class='gradColor'>fastest</span> Internet provider</div>");
          amo.registerAttribute("frameText31", "TEXT", "<div style='top:8px;left:10px;font-size:72px;line-height:1;' class='gradColor'>$100</div>");
-         amo.registerAttribute(
-            "frameText32",
-            "TEXT",
-            "<div style='top:28px;left:190px;font-size:22px;line-height:.8;'>Amazon.com Gift Card<span style='font-size:10px;' class='AlticeRegular'><br>Restrictions apply.</span></div>"
-         );
+         amo.registerAttribute("frameText32", "TEXT", "<div style='top:28px;left:190px;font-size:22px;line-height:.8;'>Amazon.com Gift Card<span style='font-size:10px;' class='AlticeRegular'><br>Restrictions apply.</span></div>");
          amo.registerAttribute("frameText41", "TEXT", "<div style='top:2px;left:10px;font-size:28px;'>1 Gig Internet</div>");
          amo.registerAttribute(
             "frameText42",
@@ -145,7 +141,7 @@
 
          <div id="frame1" class="frame">
             <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-            <div id="frameText11" class="frameText">!{frameText11}</div>
+            <div id="frameText1" class="frameText">!{frameText1}</div>
 
             <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
             <div
@@ -241,10 +237,11 @@
                      frameChangeFlag = true;
                      gsap
                         .timeline({ defaults: { ease: "power2.Out", duration: 0.3 } })
-                        .to("#frameText11", { delay: 0.25, autoAlpha: 1, x: 0, y: 0 })
+                        .to("#frameText1", { delay: 0.25, autoAlpha: 1, x: 0, y: 0 })
                         .to('div[id^="frameText' + frameId + '"]', flag == true ? {} : { delay: 2, opacity: 0, onComplete: animateFrame2 });
                   };
-                  gsap.delayedCall(0.8, animateFrame1);
+                  if('frame1' in ad.layers) ad.layers.frame1.remove();
+                    gsap.delayedCall(1.2, animateFrame4, [true]);
                }
             );
          }, 2000);
