--- a/M/Microsoft/Microsoft_Office_Gig_Worker/ads/728x90/DesignerPPT/O365_GIgWorkers_USA_728x90_BAN_Designer_PPT_English_NA_NA_ANI_BN_NA_1.htm
+++ b/M/Microsoft/Microsoft_Office_Gig_Worker/ads/728x90/DesignerPPT/O365_GIgWorkers_USA_728x90_BAN_Designer_PPT_English_NA_NA_ANI_BN_NA_1.htm
@@ -110,33 +110,77 @@ function handleComplete(evt,comp) {
         startBanner()
     }
     TweenMax.delayedCall(0.2,function(){
-        var iframe = window.frameElement;
-		var parentWindow = iframe.contentWindow.parent ? iframe.contentWindow.parent  : iframe.contentWindow;
-		var bannerData = parentWindow.getBannerData();
-		bannerData.headline1 = eval(bannerData.textField1);
-		bannerData.headline2 = eval(bannerData.textField2);
-		bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"11.5px",-2,2,"50","300", "center"] : '';
-		animation_container.addEventListener("click", function(){
-			parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl);
-			if(bannerData.clickTracker) {
-				var clickTrackers = bannerData.clickTracker.split('^');
-				clickTrackers.forEach(function(url){
+			var ctaAlignment = function(position){
+				position = position ? position : 'left';
+				var layers = exportRoot.mainMC;
+				var adWidth = document.querySelector('#animation_container').offsetWidth;
+				var ctaBackgroundColor = layers.cta.children[0].graphics._fill.style;
+				ctaBackgroundColor = '#0078D7';
+				var ctaWidth = layers.txtCta.children[0].children[0].getBounds().width + 45;
+				layers.txtCta.regX = 0;
+				layers.txtCta.children[0].x = 0;
+				layers.txtCta.children[0].y += 5;
+				layers.cta.regX = 0;
+				layers.cta.regY = 0;
+				layers.cta.scaleX = 1;
+				layers.cta.scaleY = 1;
+				layers.cta.arrow.arrow_1.x = 0;
+				layers.cta.arrow.arrow_1.y += 1;
+				layers.cta.arrow.arrow.x = 0;
+				layers.cta.arrow.arrow.y += 1;
+				layers.cta.arrow.arrow_1.regX = 0;
+				layers.cta.arrow.arrow.regX = 0;
+				layers.cta.arrow.arrow.scaleX = 0.7;
+				layers.cta.arrow.arrow.scaleY = 0.7;
+				layers.cta.arrow.arrow_1.scaleX = 0.7;
+				layers.cta.arrow.arrow_1.scaleY = 0.7;
+				layers.cta.arrow.regX = 0;
+				layers.cta.children[0].x = 0;
+				layers.cta.children[0].y = 0;
+				layers.cta.children[0].scaleX = 1;
+				layers.cta.children[0].scaleY = 1;
+				layers.cta.children[0].regX = 0;
+				layers.cta.children[0].regY = 0;
+				layers.cta.children[0].graphics.clear();
+				layers.cta.children[0].graphics.beginFill(ctaBackgroundColor).drawRect(0, -15, ctaWidth, 30);
+				if(position == 'right') {
+					layers.cta.x = adWidth - ctaWidth;
+					layers.txtCta.x = adWidth - ctaWidth + 15;
+					layers.cta.arrow.x = ctaWidth - 20;
+				} else {
+					layers.cta.x = 0;
+					layers.txtCta.x = 15;
+					layers.cta.arrow.x = ctaWidth - 20;
+				}
+			}
+      var iframe = window.frameElement;
+			var parentWindow = iframe.contentWindow.parent ? iframe.contentWindow.parent  : iframe.contentWindow;
+			var bannerData = parentWindow.getBannerData();
+			bannerData.headline1 = eval(bannerData.textField1);
+			bannerData.headline2 = eval(bannerData.textField2);
+			bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,(bannerData.ctaText.length >= 15 ? "9px" : "11.5px"),0,0,"50","300", "center"] : '';
+			animation_container.addEventListener("click", function(){
+				parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl);
+				if(bannerData.clickTracker) {
+					var clickTrackers = bannerData.clickTracker.split('^');
+					clickTrackers.forEach(function(url){
+						if(url && url.toLowerCase() != 'na') {
+								(new Image()).src = url;
+						}
+					});
+				}
+			});
+			if(bannerData.impressionTracker) {
+				var impressionTrackers = bannerData.impressionTracker.split('^');
+				impressionTrackers.forEach(function(url){
 					if(url && url.toLowerCase() != 'na') {
 							(new Image()).src = url;
 					}
 				});
 			}
-		});
-		if(bannerData.impressionTracker) {
-			var impressionTrackers = bannerData.impressionTracker.split('^');
-			impressionTrackers.forEach(function(url){
-				if(url && url.toLowerCase() != 'na') {
-						(new Image()).src = url;
-				}
-			});
-		}
-        exportRoot.initBanner(bannerData)
-        exportRoot.runBanner()
+      exportRoot.initBanner(bannerData)
+			ctaAlignment('right');
+      exportRoot.runBanner()
     })
 	initReady=true
 }
